# examples

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Experimental Setup/: custom_signals.csv
Experimental Setup/BGLP Dataset/: 01 convert all.bat
Experimental Setup/BGLP Dataset/config/: 1_convert_all_signals.ini  2_convert_some_signals_only.ini  bglp_layout.ini
Experimental Setup/BGLP Dataset/scripts/: allow_signals.cpp
Experimental Setup/BIGIDEA/: 01 convert all.bat
Experimental Setup/BIGIDEA/config/: 1_convert_all_signals.ini  2_convert_some_signals_only.ini  big_idea_formats.ini
Experimental Setup/BIGIDEA/source/: info.txt
Experimental Setup/FDA Single Day/: experimental setup.ini  test.csv
Experimental Setup/Icarus/: dynamic boluses.ini  fixed boluses.ini  readme.txt
Experimental Setup/UVA Single Day/: experimental setup.ini  test.csv  uva_single_day_scenario.csv
Native Scripts/: absolute_error.cpp  allow_signals.cpp  circular_buffer.h  constant_signal.cpp  deny_signals.cpp  diffusion_1_blood.cpp  discard_until.cpp  ema.cpp  level.h  linear_regression.cpp  relative_error.cpp  signal_copy.cpp  signal_mapping.cpp  time_forward_signals.cpp  wma.cpp
Program/example_C_pump/: CMakeLists.txt
Program/example_C_pump/configuration/: config.ini  visualization.ini
Program/example_C_pump/src/: config.c  config.h  helper.c  helper.h  main.c
SDK/example_Matlab/: README.txt
SDK/example_Matlab/scripts/: linear_get_continuous_levels.m
SDK/example_discrete_model/: CMakeLists.txt
SDK/example_discrete_model/src/: descriptor.cpp  descriptor.h  example_discrete_model.cpp  example_discrete_model.h
SDK/example_filter/: CMakeLists.txt
SDK/example_filter/src/: descriptor.cpp  descriptor.h  example_filter.cpp  example_filter.h
SDK/example_metric/: CMakeLists.txt
SDK/example_metric/src/: descriptor.cpp  descriptor.h  example_metric.cpp  example_metric.h
SDK/example_metric/src/win/: dllmain.cpp
SDK/example_model/: CMakeLists.txt
SDK/example_model/src/: descriptor.cpp  descriptor.h  example_signal.cpp  example_signal.h
SDK/example_solver/: CMakeLists.txt
SDK/example_solver/src/: descriptor.cpp  descriptor.h  example_solver.cpp  example_solver.h
entities/discrete_model/: CMakeLists.txt
entities/discrete_model/src/: descriptor.cpp  descriptor.h  example_discrete_model.cpp  example_discrete_model.h
entities/filter/: CMakeLists.txt
entities/filter/src/: descriptor.cpp  descriptor.h  example_filter.cpp  example_filter.h
entities/metric/: CMakeLists.txt
entities/metric/src/: descriptor.cpp  descriptor.h  example_metric.cpp  example_metric.h
entities/signal_model/: CMakeLists.txt
entities/signal_model/src/: descriptor.cpp  descriptor.h  example_signal.cpp  example_signal.h
entities/solver/: CMakeLists.txt
entities/solver/src/: descriptor.cpp  descriptor.h  example_solver.cpp  example_solver.h
entities/solver/src/win/: example_solver.def
example_C_pump/: CMakeLists.txt
example_C_pump/configuration/: config.ini  visualization.ini
example_C_pump/src/: config.c  config.h  helper.c  helper.h  main.c
example_configuration/fda single day/: config.ini
example_configuration/uva single day/: uva 1day.ini  uva_single_day_scenario.csv
example_discrete_model/: CMakeLists.txt
example_discrete_model/src/: descriptor.cpp  descriptor.h  example_discrete_model.cpp  example_discrete_model.h
example_discrete_model/src/win/: dllmain.cpp  example_discrete_model.def
example_filter/: CMakeLists.txt
example_filter/src/: descriptor.cpp  descriptor.h  example_filter.cpp  example_filter.h
example_filter/src/win/: example_filter.def
example_metric/: CMakeLists.txt
example_metric/src/: descriptor.cpp  descriptor.h  example_metric.cpp  example_metric.h
example_metric/src/win/: example_metric.def
example_model/src/: descriptor.cpp  descriptor.h  example_signal.cpp  example_signal.h
example_model/src/win/: example_model.def
example_solver/: CMakeLists.txt
example_solver/src/: descriptor.cpp  descriptor.h  example_solver.cpp  example_solver.h
experimental-setups/: custom_signals info.txt  custom_signals.csv
experimental-setups/BGLP Dataset/: 02 convert some.bat
experimental-setups/BGLP Dataset/config/: 1_convert_all_signals.ini  2_convert_some_signals_only.ini  bglp_layout.ini
experimental-setups/BGLP Dataset/source/: info.txt
experimental-setups/BIGIDEA/: 02 convert some.bat  readme.txt
experimental-setups/BIGIDEA/config/: 1_convert_all_signals.ini  2_convert_some_signals_only.ini  big_idea_formats.ini  custom_signals.csv
experimental-setups/FDA Single Day/: experimental setup.ini
experimental-setups/HealthKit/: healthkit_layout.ini
experimental-setups/Icarus/data/: game log.csv
frontends/C-pump-controller/: CMakeLists.txt
frontends/C-pump-controller/configuration/: config.ini  visualization.ini
frontends/C-pump-controller/src/: config.c  helper.c  helper.h  main.c
misc/matlab/: matlab_manifest.xml
misc/matlab/scripts/: least_squares_solve.m
native-scripts/: absolute_error.cpp  deny_signals.cpp  discard_until.cpp  level.h  relative_error.cpp  signal_mapping.cpp
