CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

MESSAGE(STATUS "Configuring the C-pump example")

PROJECT(C_pump)

SET(PROJ "C_pump")
SET(CMAKE_C_STANDARD 11)
SET(SMARTCGMS_COMMON_DIR "../../src/common")

INCLUDE_DIRECTORIES("${SMARTCGMS_COMMON_DIR}")
SET(COMMON_FILES )
LIST(APPEND COMMON_FILES "${SMARTCGMS_COMMON_DIR}/utils/winapi_mapping.c")


FILE(GLOB SRC_FILES "src/*.cpp" "src/*.hpp" "src/*.c" "src/*.h")

SOURCE_GROUP("common" FILES ${COMMON_FILES})
SOURCE_GROUP("src" FILES ${SRC_FILES})

add_executable(C_pump ${SRC_FILES})
TARGET_COMPILE_DEFINITIONS(${PROJ} PUBLIC "-DNOGUI")